force-app/main/default/objects/Sales_Localization__c/Sales_Localization__c.object-meta.xml
<CustomObject>
    <label>Sales Localization</label>
    <nameField>
        <displayFormat>L{000000}</displayFormat>
        <label>Sales Localization Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Localizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>