force-app/main/default/objects/Sales_Localization__c/fields/Genetic_Provider__c.field-meta.xml
<CustomField>
    <fullName>Genetic_Provider__c</fullName>
    <description>Pulled from “Genetic Provider” field on Variety</description>
    <inlineHelpText>Pulled from “Genetic Provider” field on Variety</inlineHelpText>
    <label>Genetic Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand_Name</valueSetName>
    </valueSet>
</CustomField>