force-app/main/default/objects/Sales_Localization__c/fields/Launch_Year__c.field-meta.xml
<CustomField>
    <fullName>Launch_Year__c</fullName>
    <description>Pulled from “Launch Year” on Variety</description>
    <inlineHelpText>Pulled from “Launch Year” on Variety</inlineHelpText>
    <label>Launch Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Safra</valueSetName>
    </valueSet>
</CustomField>