force-app/main/default/objects/Sales_Localization__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Sales Localizations</relationshipLabel>
    <relationshipName>Sales_Localizations</relationshipName>
    <type>Lookup</type>
</CustomField>