force-app/main/default/objects/Sales_Localization__c/fields/Location_Region__c.field-meta.xml
<CustomField>
    <fullName>Location_Region__c</fullName>
    <formula>Location__r.Location_Region__c</formula>
    <label>Location Region</label>
    <type>Text</type>
</CustomField>