force-app/main/default/objects/Sales_Localization__c/fields/Maturity_Group__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Group__c</fullName>
    <description>Pulled from “Maturity Group” on Variety</description>
    <inlineHelpText>Pulled from “Maturity Group” on Variety</inlineHelpText>
    <label>Maturity Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>