force-app/main/default/objects/Sales_Localization__c/fields/Relative_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Relative_Maturity__c</fullName>
    <description>Pulled from “Relative Maturity” on Variety</description>
    <inlineHelpText>Pulled from “Relative Maturity” on Variety</inlineHelpText>
    <label>Relative Maturity</label>
    <length>5</length>
    <type>Text</type>
</CustomField>