force-app/main/default/objects/Sales_Localization__c/fields/Sales_Estimation__c.field-meta.xml
<CustomField>
    <fullName>Sales_Estimation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Estimation</label>
    <referenceTo>Sales_Volume_Estimation__c</referenceTo>
    <relationshipLabel>Sales Localizations</relationshipLabel>
    <relationshipName>Sales_Localizations</relationshipName>
    <type>Lookup</type>
</CustomField>