force-app/main/default/objects/Sales_Localization__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <formula>TEXT(Sales_Estimation__r.Subtype__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtype</label>
    <type>Text</type>
</CustomField>