force-app/main/default/objects/Sales_Localization__c/fields/Trait__c.field-meta.xml
<CustomField>
    <fullName>Trait__c</fullName>
    <description>Pulled from “Technology” field on Variety</description>
    <inlineHelpText>Pulled from “Technology” field on Variety</inlineHelpText>
    <label>Trait</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Technology</valueSetName>
    </valueSet>
</CustomField>