force-app/main/default/objects/Sales_Localization__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variety</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Sales Localizations</relationshipLabel>
    <relationshipName>Sales_Localizations</relationshipName>
    <type>Lookup</type>
</CustomField>