force-app/main/default/objects/Sales_Localization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Location__c</columns>
    <columns>Variety__c</columns>
    <columns>Percentage__c</columns>
    <columns>Subtype__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>